syntax="proto3";
 package calculator;
 option go_package="calculator/calculatorpb";

 message SumRequest{
     int32 first_number=1;
     int32 second_number=2;
    }
message SumResponse{
    int32 sum_response=1;
}
message PrimeNumberRequest{
    int64 number=1;
}
message PrimeNumberResponse{
    int64 primeNumber=1;
}
message SquareRootRequest{
    float number=1;
}
message SquareRootResponse{
    double result=1;
}
service CalculatorService{
    rpc Sum(SumRequest) returns (SumResponse){};
    rpc PrimeNumber(PrimeNumberRequest) returns(stream PrimeNumberResponse){};
    //error handling
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse){};
}